Yet another attempt to fix the background bug on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,10 +68,6 @@ table {
 
 body {
     background: url(../content/background.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
 }
 
 input[type=text] {
